name:                GrammarLearning
version:             0.1.0.0
synopsis:            Learning syntax trees with RNNs.
--description:         
--homepage:            https://github.com/vladfi1/hs-nn
license:             MIT
license-file:        LICENSE
author:              Vlad Firoiu
maintainer:          vladfi2@gmail.com
-- copyright:           
 category:           Machine Learning
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.18

library
  exposed-modules:  GrammarNNDAG
                    JavaDAG
                    Grammar
                    JavaGeneric
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.8 && <4.9
               , hs-misc
               , hs-nn
               , accelerate >= 2.0
               , vinyl
               , generics-sop
               , hmatrix
               , language-java
               , singletons
               , vector
               , data-default
               
  hs-source-dirs:      src
  default-language:    Haskell2010

